# VoiceAgent-Quick-Start

./: LICENSE  README.md  pyproject.toml
src/: agent.py  audio.py  cli.py  global_rules.py  main.py  stt.py  tts.py
